# AIML

./: .gitignore  MCP-server collection.md  README.md  REPORT.md  REVIEW_REPORT.md
01_Building_a_Multi-Document_RAG_System/: BUILD_LOG.md  README.md  guide.txt  rag_server.py  requirements.txt
02_Building_a_Multimodal_AI_Model_CLIP/: BUILD_LOG.md  KIRO_PROMPT.txt  clip.py  guide.txt
03_Building_an_Agentic_RAG_Pipeline/: BUILD_LOG.md  KIRO_PROMPT.txt  agentic_rag.py  guide.txt  requirements.txt
04_Building_a_RAG_Pipeline_for_LLMs/: .gitignore  LICENSE  README.md  guide.txt  knowledge.txt  log.txt  output.txt  rag_pipeline.py  requirements.txt
05_Building_Synthetic_Medical_Records_using_GANs/: Follow-up_Records.csv  README.md  build.sh  guide.txt  log.txt  medical_gan.py  requirements.txt  simple_gan_demo.py
06_Build_Your_First_RAG_System_From_Scratch/: RULES.md  faiss_index.pkl  guide.txt  log.txt  my_knowledge.txt  rag_from_scratch.py  requirements.txt
07_Data_Augmentation_using_LLMs/: BUILD_FROM_SCRATCH.md  DEVELOPMENT_LOG.md  README.md  data_augmentation.py  guide.txt  requirements.txt
26_Build_an_AI_Agent_to_Master_a_Game_DQN/: .gitignore  BUILD_FROM_SCRATCH.md  BUILD_LOG.md  BUILD_SUMMARY.md  CMakeLists.txt  Dockerfile  ENGINEERING_DECISIONS.md  README.md  dqn.cpp  game.h  guide.txt
26_Build_an_AI_Agent_to_Master_a_Game_DQN/docs/: CHANGELOG.md  agent_log.md  architecture.md  sdlc.md  tasks.md  tech_stack.md
26_Build_an_AI_Agent_to_Master_a_Game_DQN/scripts/: build-and-run.sh  build-in-container.sh  setup.sh  validate.sh
MCP-tools/: MCP.txt  (+1 more)
(+307 files in other folders)
